--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         class App extends React.Component {
             render() {
                 return (
-                    <div className="">
+                    <div className="app-content-container">
                         <h1> Hey there. </h1>
                     </div>
                 );
