--- a/react-with-cdn/index.html
+++ b/react-with-cdn/index.html
@@ -8,58 +8,17 @@
   <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
   <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
   <title>Document</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script type="text/babel">
-    class App extends React.Component {
-      state = {
-        name: 'Yu',
-        age: '30'
-      };
-      clickHandler = (e) => {
-        console.log(this)
-        console.log(e.target, this.state.name);
-        this.setState({ name: 'Chao Yu' })
-      };
-      mouseOverHandler = (e) => {
-        console.log(e)
-        console.log(e.pageX)
-      }
-      onCopyHandler = (e) => {
-        console.log('try to be original');
-      }
-      onchangeHandler = (e) => {
-        this.setState({
-          name: e.target.value
-        })
-      }
-      onSubmitHandler = (e) => {
-        e.preventDefault();
-        console.log('form submitted', this.state.name)
-      }
-      render() {
-        return (
-          <div className="app-content-container">
-            <h1> Hey {this.state.name}. </h1>
-            <p>{Math.random() * 10}</p>
-            <button onClick={this.clickHandler}>Click me</button>
-            <button onMouseOver={this.mouseOverHandler}>Hover me</button>
-            <p onCopy={this.onCopyHandler}>what we think ???</p>
-            <form onSubmit={this.onSubmitHandler}>
-              <input onChange={this.onchangeHandler} type="text" />
-              <button>Submit</button>
-            </form>
-          </div>
-        );
-      }
+  <!-- some HTML -->
+  <!-- some other HTML -->
+  <!-- import react-dom.js -->
+  <script type="text/babel" src="Main.js"></script>
 
-    }
-    ReactDOM.render(<App />, document.getElementById("app"));
-  </script>
+  <!-- import your JS and add - type="text/babel" - otherwise babel wont parse it -->
 </body>
 
 </html>
